--- a/index.html
+++ b/index.html
@@ -42,38 +42,38 @@
             <div class="column small-1 medium-2 large-1">
             <h2>Perry Mason</h2>
             <img src="images/laywer.jpeg" alt="lawyer">
-            <p><button>LEARN MORE</button></p>
+            <p>LEARN MORE</p>
             </div>
 
             <div class="column small-3 medium-3 large-1">
              <h2>Malcom Turnbull</h2>
              <img src="images/laywer1.jpg" alt="lawyer">
-             <p><button>LEARN MORE</button></p>
+             <p>LEARN MORE</p>
              </div>
 
              <div class="column small-3 medium-2 large-1">
             <h2>Alan Shore</h2>
             <img src="images/laywer2.jpg" alt="lawyer">
-            <p><button>LEARN MORE</button></p>
+            <p>LEARN MORE</p>
             </div>
 
              <div class="column small-3 medium-2 large-1">
             <h2>Alicia Florrick</h2>
             <img src="images/laywer3.jpg" alt="lawyer">
-            <p><button>LEARN MORE</button></p>
+            <p>LEARN MORE</p>
             </div>
         </div>
         <div class="callToAction">
-            <div class="column small-2 medium-1 large-1">
-            <p><button>CLIENTS</button></p>
+            <div class="column small-12 medium-3 large-2">
+            <button>CLIENTS</button>
             </div>
     
             <div class="column small-12 medium-3 large-2">
-            <p><button>YOUR CASE REVIEW</button></p>
+            <button>YOUR CASE REVIEW</button>
             </div>
 
             <div class="column small-12 medium-3 large-2">
-            <p><button>FAMOUS CASES</button></p>
+            <button>FAMOUS CASES</button>
             </div>
         </div>
         
@@ -87,7 +87,7 @@
         mus pid nec diam mid! Phasellus habitasse! Vel
         montes ac dignissim phasellus, cum ultrices
         integer</p>
-        <button>READ MORE</button>
+        <p>READ MORE</p>
     </div>
     <div class="column small-1 medium-12 large-4">
         <img src="images/laywer1.jpg" alt="lawyer">
@@ -98,7 +98,7 @@
             mus pid nec diam mid! Phasellus habitasse! Vel
             montes ac dignissim phasellus, cum ultrices
             integer</p>
-            <button>READ MORE</button>
+            <p>READ MORE</p>
         </div>
     <div class="column small-1 medium-12 large-4">
         <img src="images/laywer2.jpg" alt="lawyer">
@@ -109,7 +109,7 @@
         dignissim phasellus, cum
         ultrices integer phasellus, cum
         ultrices integer</p>
-        <button>READ MORE</button>
+        <p>READ MORE</p>
     </div>
     <div class="column small-1 medium-12 large-4">
         <img src="images/laywer3.jpg" alt="lawyer">
@@ -120,7 +120,7 @@
         dignissim phasellus, cum
         ultrices integer phasellus, cum
         ultrices integer</p>
-        <button>READ MORE</button>
+        <p>READ MORE</p>
     </div>
 <div class="column small-12 medium-12 large-12">
 <h3>tip of the day</h3>
